# capital_pkg

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py  test.bash
.github/workflows/: capital.yml
capital_pkg/: client_node.py  server_node.py
srv/: GetCapital.srv
test/: test.bash
